--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p> HelloWorld <a href="www.google.com"> </a> </p>
-    <ing src="img/901.jpg" alt="jwrb">
+    <img src="img/901.jpg" alt="jwrb">
 </body>
 </html>
